404 ve 422 sayfalarına Türkçe rütuş

--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Aradığınız Sayfa Bulunamadı! (404)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,9 +51,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Aradığınız sayfa bulunamadı!</h1>
+    <p>Adresi yanlış yazmış olabilirsiniz veya bu sayfa taşınmış olabilir.</p>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>Bir hata olduğunu düşünüyorsanız <strong><a href="http://www.rubyturkiye.org/group">e-mail grubumuz</a></strong> üzerinden bizimle irtibata geçebilirsiniz.</p>
 </body>
 </html>
