500 sayfasına Türkçe rütuş

--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Üzgünüz, bir hata oluştu! (500)</title>
   <style>
   body {
     background-color: #EFEFEF;
@@ -50,8 +50,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>Üzgünüz, bir hata oluştu!</h1>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
+  <p>En kısa süre içerisinde bu durumu inceliyor olacağız.</p>
 </body>
 </html>
