--- a/public/422.html
+++ b/public/422.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Yetkilendirme hatası! (422)</title>
   <style>
   body {
