--- a/public/500.html
+++ b/public/500.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Üzgünüz, bir hata oluştu! (500)</title>
   <style>
   body {
