Change 422 warning message

--- a/public/422.html
+++ b/public/422.html
@@ -54,6 +54,6 @@
       <h1>Erişmeye çalıştığınız sayfa veya yapmaya çalıştığınız işlem reddedildi!</h1>
       <p>Yetkinizin olmadığı bir işlem yapmaya çalışmış olabilirsiniz.</p>
     </div>
-    <p>Bir hata olduğunu düşünüyorsanız <strong><a href="https://discuss.rubyturkiye.org/">Discord</a></strong> üzerinden bizimle irtibata geçebilirsiniz.</p>
+    <p>Bir hata olduğunu düşünüyorsanız <strong><a href="https://discuss.rubyturkiye.org/">Discourse</a></strong> üzerinden bizimle irtibata geçebilirsiniz.</p>
 </body>
 </html>
